Added More HTML and CSS
Also added picture links to the HTML

--- a/index.html
+++ b/index.html
@@ -31,6 +31,51 @@
               <a class="btn-try" href="#">Try 4 Free</a>
               <a class="btn-try-ghost" href="#">More Info</a>
             </div>
+            <div class="disclaimer-section">
+              <div class="disclaimer">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+                quidem eligendi eaque expedita, rerum similique id assumenda ut
+                fugit, nemo dolore esse aliquam officia quos dolor soluta
+                ratione quod provident porro iste eos beatae. Quibusdam eveniet
+                sunt minima magni? Delectus tempore at tenetur eaque voluptas!
+                Provident assumenda velit culpa voluptas?
+              </div>
+            </div>
+          </div>
+
+          <div class="photos-section">
+            <div class="photos">
+              <img
+                src="https://images.pexels.com/photos/6617685/pexels-photo-6617685.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                width="400px"
+                alt=""
+              />
+              <img
+                src="https://images.pexels.com/photos/4586688/pexels-photo-4586688.jpeg?auto=compress&cs=tinysrgb&w=1600"
+                width="200px"
+                alt=""
+              />
+              <img
+                src="https://images.pexels.com/photos/3791664/pexels-photo-3791664.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                width="400px"
+                alt=""
+              />
+              <img
+                src="https://images.pexels.com/photos/8617649/pexels-photo-8617649.jpeg?auto=compress&cs=tinysrgb&w=1600"
+                width="400px"
+                alt=""
+              />
+              <img
+                src="https://images.pexels.com/photos/7568975/pexels-photo-7568975.jpeg?auto=compress&cs=tinysrgb&w=1600"
+                width="200px"
+                alt=""
+              />
+              <img
+                src="https://images.pexels.com/photos/834509/pexels-photo-834509.jpeg?auto=compress&cs=tinysrgb&w=1600"
+                width="200px"
+                alt=""
+              />
+            </div>
           </div>
         </div>
       </div>
