More HTML and CSS Changes

--- a/index.html
+++ b/index.html
@@ -32,14 +32,29 @@
               <a class="btn-try-ghost" href="#">More Info</a>
             </div>
             <div class="disclaimer-section">
-              <div class="disclaimer">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-                quidem eligendi eaque expedita, rerum similique id assumenda ut
-                fugit, nemo dolore esse aliquam officia quos dolor soluta
-                ratione quod provident porro iste eos beatae. Quibusdam eveniet
-                sunt minima magni? Delectus tempore at tenetur eaque voluptas!
-                Provident assumenda velit culpa voluptas?
-              </div>
+              <h6 class="disclaimer">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius
+                at, vitae, magnam voluptates id officia laudantium est, illum
+                molestiae eos exercitationem rerum animi numquam ex repellat.
+                Illum cum, ullam quos ducimus ad alias eveniet eos architecto
+                illo! Vel cum inventore et sint eos dolore, voluptatibus
+                provident ipsam enim, consequatur tempora ipsum aliquam quos
+                commodi. Eveniet officia porro mollitia, ducimus numquam alias
+                cupiditate molestiae temporibus quaerat odio ut expedita ab.
+                Expedita, saepe doloribus? Nostrum excepturi cupiditate
+                reiciendis. Saepe sunt, corrupti accusantium voluptas blanditiis
+                et sequi quod? Quia sint, enim, saepe quis eos esse debitis
+                molestias quam corrupti quidem, ut totam fugiat. <br /><br />
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque,
+                pariatur! Similique aliquid ipsum saepe nostrum, ullam eligendi
+                porro quis magnam sint beatae fugit animi id dolore tenetur sit
+                at quasi vero necessitatibus velit repudiandae, nemo voluptas
+                totam ipsam hic! Facilis suscipit, quo dolore dignissimos ad
+                accusamus? Nesciunt iusto, consectetur, placeat mollitia culpa,
+                non officia quaerat consequatur nisi incidunt minima quos. Eum
+                perferendis dolor, consequuntur, soluta amet culpa deleniti
+                fuga, delectus incidunt reiciendis labore esse voluptatibus?
+              </h6>
             </div>
           </div>
 
@@ -47,7 +62,7 @@
             <div class="photos">
               <img
                 src="https://images.pexels.com/photos/6617685/pexels-photo-6617685.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-                width="400px"
+                width="300px"
                 alt=""
               />
               <img
@@ -57,15 +72,15 @@
               />
               <img
                 src="https://images.pexels.com/photos/3791664/pexels-photo-3791664.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-                width="400px"
+                width="300px"
                 alt=""
               />
               <img
                 src="https://images.pexels.com/photos/8617649/pexels-photo-8617649.jpeg?auto=compress&cs=tinysrgb&w=1600"
-                width="400px"
+                width="300px"
                 alt=""
               />
-              <img
+              <!-- <img
                 src="https://images.pexels.com/photos/7568975/pexels-photo-7568975.jpeg?auto=compress&cs=tinysrgb&w=1600"
                 width="200px"
                 alt=""
@@ -74,7 +89,7 @@
                 src="https://images.pexels.com/photos/834509/pexels-photo-834509.jpeg?auto=compress&cs=tinysrgb&w=1600"
                 width="200px"
                 alt=""
-              />
+              /> -->
             </div>
           </div>
         </div>
