--- a/index.html
+++ b/index.html
@@ -6,18 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
-    ">
     <title>Landing Page</title>
   </head>
   <body>
+    <!-- Navbar Starts Here -->
     <nav class="navbar">
       <div class="main-logo">Ultimate Messaging</div>
       <div class="menu">
@@ -29,7 +25,9 @@
         </ul>
       </div>
     </nav>
+    <!-- Navbar Ends Here -->
 
+    <!-- Home Section Starts Here -->
     <section>
       <div class="container">
         <div id="home">
@@ -104,7 +102,16 @@
         </div>
       </div>
     </section>
+    <!-- Home Section Ends Here -->
 
-    <footer class="footer"></footer>
+<!-- Footer Starts Here -->
+    <footer class="footer">
+      <div class="media-icons">
+      <a href=""><i class="fa-brands fa-facebook"></i></a>
+      <a href=""><i class="fa-brands fa-twitter"></i></a>
+      <a href=""><i class="fa-brands fa-instagram"></i></a>
+    </footer>
+      </div>
+
   </body>
 </html>
