Added Social Media Tags

--- a/index.html
+++ b/index.html
@@ -1,93 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    />
-    <title>Landing Page</title>
-  </head>
-  <body>
-    <!-- Navbar Starts Here -->
-    <nav class="navbar">
-      <div class="main-logo">Ultimate Messaging</div>
-      <div class="menu">
-        <ul class="nav-links">
-          <li><a href="#">Product</a></li>
-          <li><a href="#">Resources</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a class="btn" href="#">Sign Up</a></li>
-        </ul>
-      </div>
-    </nav>
-    <!-- Navbar Ends Here -->
 
-    <!-- Home Section Starts Here -->
-    <section>
-      <div class="container">
-        <div id="home">
-          <div class="info-section">
-            <h1>Connect With Your Friends & Family</h1>
-            <h4>Fast Reliable & Secure</h4>
-            <div class="button-section">
-              <a class="btn-try" href="#">Try 4 Free</a>
-              <a class="btn-try-ghost" href="#">More Info</a>
-            </div>
-            <div class="disclaimer-section">
-              <h6 class="disclaimer">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius
-                at, vitae, magnam voluptates id officia laudantium est, illum
-                molestiae eos exercitationem rerum animi numquam ex repellat.
-                Illum cum, ullam quos ducimus ad alias eveniet eos architecto
-                illo! Vel cum inventore et sint eos dolore, voluptatibus
-                provident ipsam enim, consequatur tempora ipsum aliquam quos
-                commodi. Eveniet officia porro mollitia, ducimus numquam alias
-                cupiditate molestiae temporibus quaerat odio ut expedita ab.
-                Expedita, saepe doloribus? Nostrum excepturi cupiditate
-                reiciendis. Saepe sunt, corrupti accusantium voluptas blanditiis
-                et sequi quod? Quia sint, enim, saepe quis eos esse debitis
-                molestias quam corrupti quidem, ut totam fugiat. <br /><br />
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque,
-                pariatur! Similique aliquid ipsum saepe nostrum, ullam eligendi
-                porro quis magnam sint beatae fugit animi id dolore tenetur sit
-                at quasi vero necessitatibus velit repudiandae, nemo voluptas
-                totam ipsam hic! Facilis suscipit, quo dolore dignissimos ad
-                accusamus? Nesciunt iusto, consectetur, placeat mollitia culpa,
-                non officia quaerat consequatur nisi incidunt minima quos. Eum
-                perferendis dolor, consequuntur, soluta amet culpa deleniti
-                fuga, delectus incidunt reiciendis labore esse voluptatibus?
-              </h6>
-            </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+  <title>Landing Page</title>
+</head>
+
+<body>
+  <!-- Navbar Starts Here -->
+  <nav class="navbar">
+    <div class="main-logo">Ultimate Messaging</div>
+    <div class="menu">
+      <ul class="nav-links">
+        <li><a href="#">Product</a></li>
+        <li><a href="#">Resources</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a class="btn" href="#">Sign Up</a></li>
+      </ul>
+    </div>
+  </nav>
+  <!-- Navbar Ends Here -->
+
+  <!-- Home Section Starts Here -->
+  <section>
+    <div class="container">
+      <div id="home">
+        <div class="info-section">
+          <h1>Connect With Your Friends & Family</h1>
+          <h4>Fast Reliable & Secure</h4>
+          <div class="button-section">
+            <a class="btn-try" href="#">Try 4 Free</a>
+            <a class="btn-try-ghost" href="#">More Info</a>
           </div>
+          <div class="disclaimer-section">
+            <h6 class="disclaimer">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius
+              at, vitae, magnam voluptates id officia laudantium est, illum
+              molestiae eos exercitationem rerum animi numquam ex repellat.
+              Illum cum, ullam quos ducimus ad alias eveniet eos architecto
+              illo! Vel cum inventore et sint eos dolore, voluptatibus
+              provident ipsam enim, consequatur tempora ipsum aliquam quos
+              commodi. Eveniet officia porro mollitia, ducimus numquam alias
+              cupiditate molestiae temporibus quaerat odio ut expedita ab.
+              Expedita, saepe doloribus? Nostrum excepturi cupiditate
+              reiciendis. Saepe sunt, corrupti accusantium voluptas blanditiis
+              et sequi quod? Quia sint, enim, saepe quis eos esse debitis
+              molestias quam corrupti quidem, ut totam fugiat. <br /><br />
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque,
+              pariatur! Similique aliquid ipsum saepe nostrum, ullam eligendi
+              porro quis magnam sint beatae fugit animi id dolore tenetur sit
+              at quasi vero necessitatibus velit repudiandae, nemo voluptas
+              totam ipsam hic! Facilis suscipit, quo dolore dignissimos ad
+              accusamus? Nesciunt iusto, consectetur, placeat mollitia culpa,
+              non officia quaerat consequatur nisi incidunt minima quos. Eum
+              perferendis dolor, consequuntur, soluta amet culpa deleniti
+              fuga, delectus incidunt reiciendis labore esse voluptatibus?
+            </h6>
+          </div>
+        </div>
 
-          <div class="photos-section">
-            <div class="photos">
-              <img
-                src="https://images.pexels.com/photos/6617685/pexels-photo-6617685.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-                width="300px"
-                alt=""
-              />
-              <img
-                src="https://images.pexels.com/photos/4586688/pexels-photo-4586688.jpeg?auto=compress&cs=tinysrgb&w=1600"
-                width="200px"
-                alt=""
-              />
-              <img
-                src="https://images.pexels.com/photos/3791664/pexels-photo-3791664.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-                width="300px"
-                alt=""
-              />
-              <img
-                src="https://images.pexels.com/photos/8617649/pexels-photo-8617649.jpeg?auto=compress&cs=tinysrgb&w=1600"
-                width="300px"
-                alt=""
-              />
-              <!-- <img
+        <div class="photos-section">
+          <div class="photos">
+            <img
+              src="https://images.pexels.com/photos/6617685/pexels-photo-6617685.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              width="300px" alt="" />
+            <img
+              src="https://images.pexels.com/photos/4586688/pexels-photo-4586688.jpeg?auto=compress&cs=tinysrgb&w=1600"
+              width="200px" alt="" />
+            <img
+              src="https://images.pexels.com/photos/3791664/pexels-photo-3791664.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              width="300px" alt="" />
+            <img
+              src="https://images.pexels.com/photos/8617649/pexels-photo-8617649.jpeg?auto=compress&cs=tinysrgb&w=1600"
+              width="300px" alt="" />
+            <!-- <img
                 src="https://images.pexels.com/photos/7568975/pexels-photo-7568975.jpeg?auto=compress&cs=tinysrgb&w=1600"
                 width="200px"
                 alt=""
@@ -97,21 +88,25 @@
                 width="200px"
                 alt=""
               /> -->
-            </div>
           </div>
         </div>
       </div>
-    </section>
-    <!-- Home Section Ends Here -->
-
-<!-- Footer Starts Here -->
-    <footer class="footer">
-      <div class="media-icons">
-      <a href=""><i class="fa-brands fa-facebook"></i></a>
-      <a href=""><i class="fa-brands fa-twitter"></i></a>
-      <a href=""><i class="fa-brands fa-instagram"></i></a>
-    </footer>
+    </div>
+    <div class="media-icons">
+      <div class="icons">
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href=""><i class="fa-brands fa-twitter"></i></a>
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
       </div>
 
-  </body>
+  </section>
+  <!-- Home Section Ends Here -->
+
+  <!-- Footer Starts Here -->
+  <!-- <footer class="footer">
+
+  </footer> -->
+
+</body>
+
 </html>
